# CE7490-Project2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py
experiment/: encode_decode.csv  plot.py  read_write.csv  test.py
raid6/: __init__.py  __main__.py  apis.py  config.py  data.py  model.py  test.py
raid6/cpp/: GF8.h  LUT.h  RSCode.cpp  RSCode.h  main.cpp  pyrscode.pyx
raid6/pyfinite/: file_ecc.py  rs_code.py
report/: main.bib  p2.tex
