[metadata]
name = raid6
version = 0.0.1
author = tc-imba
author-email = liuyh615@126.com
summary = CE7490 Project 2 - raid6
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Source Code = https://github.com/tc-imba/CE7490-Project2
license = MIT
keywords =
    raid

[files]
packages =
    raid6
